--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/sai.jpg" alt="">
+                    <img src="sai.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm SaiPrasanth and I'm a <span class="typing-2"></span></div>
