--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="column right">
                     <div class="text">I'm SaiPrasanth and I'm a <span class="typing-2"></span></div>
                     <p>I am SaiPrasanth currently Pursuing BTech 4th Year in Computer Science and Engineering Department in Krishna University College of Engineering and Technology.My current Semester percentage is about 80%.I'm Intrested in Full Stack Development.My Hobbies are playing cricket,cooking etc..</p>
-                    <a href="sai.pdf" download="sai.pdf">Download CV</a>
+                    <a href="Saiprasanth_99.pdf" download="sai.pdf">Download CV</a>
                 </div>
             </div>
         </div>
